[package]
name = "algorithm"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
[[bin]]
name = "no_10869"
path = "src/bin/implementation/no_10869.rs"

[[bin]]
name = "ab_1001"
path = "src/bin/implementation/ab_1001.rs"

[[bin]]
name = "helloworld_2557"
path = "src/bin/implementation/helloworld_2557.rs"

[[bin]]
name = "ab_1000"
path = "src/bin/implementation/ab_1000.rs"

[[bin]]
name = "no_11382"
path = "src/bin/implementation/no_11382.rs"

[[bin]]
name = "no_1330"
path = "src/bin/implementation/no_1330.rs"

[[bin]]
name = "no_9498"
path = "src/bin/implementation/no_9498.rs"

[[bin]]
name = "no_14681"
path = "src/bin/implementation/no_14681.rs"

[[bin]]
name = "no_2420"
path = "src/bin/implementation/no_2420.rs"

[[bin]]
name = "no_2741"
path = "src/bin/implementation/no_2741.rs"

[[bin]]
name = "no_10872"
path = "src/bin/implementation/no_10872.rs"

[[bin]]
name = "no_10950"
path = "src/bin/implementation/no_10950.rs"

[[bin]]
name = "no_10952"
path = "src/bin/implementation/no_10952.rs"

[[bin]]
name = "no_2438"
path = "src/bin/implementation/no_2438.rs"

[[bin]]
name = "no_1008"
path = "src/bin/implementation/no_1008.rs"

[[bin]]
name = "no_1152"
path = "src/bin/string/no_1152.rs"

[[bin]]
name = "no_2439"
path = "src/bin/implementation/no_2439.rs"

[[bin]]
name = "no_2475"
path = "src/bin/implementation/no_2475.rs"

[[bin]]
name = "no_2562"
path = "src/bin/implementation/no_2562.rs"

[[bin]]
name = "no_2557"
path = "src/bin/string/no_2557.rs"

[[bin]]
name = "no_1546"
path = "src/bin/math/no_1546.rs"

[[bin]]
name = "no_10828"
path = "src/bin/structure/no_10828.rs"

[[bin]]
name = "no_10828_re"
path = "src/bin/structure/no_10828_re.rs"

[[bin]]
name = "no_10845"
path = "src/bin/structure/no_10845.rs"

[[bin]]
name = "no_1018"
path = "src/bin/brute_force/no_1018.rs"

[[bin]]
name = "no_1259"
path = "src/bin/string/no_1259.rs"

[[bin]]
name = "no_2292"
path = "src/bin/implementation/no_2292.rs"

[[bin]]
name = "no_10989"
path = "src/bin/math/no_10989.rs"

[[bin]]
name = "no_1874"
path = "src/bin/structure/no_1874.rs"

[[bin]]
name = "no_11650"
path = "src/bin/sort/no_11650.rs"

[[bin]]
name = "no_4949"
path = "src/bin/structure/no_4949.rs"

[[bin]]
name = "no_7568"
path = "src/bin/brute_force/no_7568.rs"

[[bin]]
name = "no_2839"
path = "src/bin/geedy/no_2839.rs"

[[bin]]
name = "no_10816"
path = "src/bin/structure/no_10816.rs"

[[bin]]
name = "no_9012"
path = "src/bin/structure/no_9012.rs"

[[bin]]
name = "no_2164"
path = "src/bin/implementation/no_2164.rs"

[[bin]]
name = "no_1920"
path = "src/bin/structure/no_1920.rs"

[[bin]]
name = "no_10814"
path = "src/bin/sort/no_10814.rs"

[[bin]]
name = "no_2775"
path = "src/bin/dp/no_2775.rs"

[[bin]]
name = "no_2630"
path = "src/bin/divide_conquer/no_2630.rs"
